# Deepfake-Voice-Detetection

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routes/: dfv_router.py
app/core/: config.py
app/frontend/: gradio_ui.py
app/model/deepfakevoice/: deepfakevoice.tflite  deepfakevoice_v1.keras  scaler.joblib
app/schemas/: dfv_schemas.py
app/services/: dfv_detector.py  dfv_service.py
app/tests/: test_dfv.py
app/utils/: tracer.py
notebook/: preprocess.ipynb  training.ipynb
